--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h1><a href="tree.html"style="text-decoration:none;">Review Archive</a></h1>
         <h1><a href="bigbag/index.html"style="text-decoration:none;">Media Storage</a></h1>
         <h1><a href="jsn.html"style="text-decoration:none;">JavaScript Notes - Beginners</a></h1>
+        <h1><a href="2023/hw.html"style="text-decoration:none;">Winter Homework 2022-02</a></h1>
     </div>
 
 
