--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/7308cf0505.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, delectus quo quis labore nihil eveniet totam harum quaerat vero pariatur ut possimus commodi aut nobis molestias eaque adipisci necessitatibus magnam!</p>
+    <p id="placeholder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, delectus quo quis labore nihil eveniet totam harum quaerat vero pariatur ut possimus commodi aut nobis molestias eaque adipisci necessitatibus magnam!</p>
     <div id="hover-box">
         <div id="cards">
             <div class="card">
