--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -15,7 +15,13 @@
         <img id="list" src="2023/menucard.fill@10x.png">
     </div>
     <div id="actual-list">
-        ok
+        <img id="sb-i" src="2023/IMG_0567.jpg">
+        <div id="list-content">
+  
+        <a href="#placeholder">Docking Board</a>
+        <a href="#hover-box">Linear Hover Boxes</a>
+        <a href="#twitch">Twitch Effect</a>
+        </div>
     </div>
     <div id="placeholder">
         <video autoplay muted loop id="ph-video" src="2023/pexels-rostislav-uzunov-7513671.mp4"></video>
@@ -82,7 +88,6 @@
     </div>
     <div id="twitch">
         <div id="tv">
-
         </div>
     </div>
 </body>
