--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div id="placeholder">
-        <video autoplay muted loop id="ph-video" src="2023/pexels-rostislav-uzunov-7513671.mp4"></video>
+        <video autoplay muted loop id="ph-video" playsinline src="2023/pexels-rostislav-uzunov-7513671.mp4"></video>
         <p id="ph-text"><a href="https://youtube.com/hyperplexed"><span class="ph-g">Aspiring</span></a> to be induitably <a href="https://wyanhache.github.io"><span class="ph-g">inspiring</span></a></p>
         <a href="#hover-box" id="pf-i">
             <img id="ph-img" src='2023/chevron.down@10x.png'>
