--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -18,9 +18,9 @@
         <img id="sb-i" src="2023/IMG_0567.jpg">
         <div id="list-content">
   
-        <a href="#placeholder">Docking Board</a>
-        <a href="#hover-box">Linear Hover Boxes</a>
-        <a href="#twitch">Twitch Effect</a>
+        <a href="#placeholder" class="clickaway">Docking Board</a>
+        <a href="#hover-box" class="clickaway">Linear Hover Boxes</a>
+        <a href="#twitch" class="clickaway">Twitch Effect</a>
         </div>
     </div>
     <div id="placeholder">
@@ -88,6 +88,12 @@
     </div>
     <div id="twitch">
         <div id="tv">
+            <div id="t-content">
+                <h1 id="t-t">Popping Off.</h1>
+                <p class="t-text">Setting the box, making the gradient, positioning the grid paper, add the text.</p>
+                <p class="t-text">Still in progress. Come back to see some absolutely epic JavaScript Failure.</p>
+                <h3 class="t-text" id="t-bottom">By wyanhache. March 27, 2023</h2>
+            </div>
         </div>
     </div>
 </body>
