--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -90,9 +90,16 @@
         <div id="tv">
             <div id="t-content">
                 <h1 id="t-t">Popping Off.</h1>
-                <p class="t-text">Setting the box, making the gradient, positioning the grid paper, add the text.</p>
-                <p class="t-text">Still in progress. Come back to see some absolutely epic JavaScript Failure.</p>
-                <h3 class="t-text" id="t-bottom">By wyanhache. March 27, 2023</h2>
+                <p class="t-text"></p>
+                <p class="t-text t-text-word t-body">Set the borders,</p>
+                <p class="t-text t-text-word t-body">Make and cleverly position the gradient using :before,</p>
+                <p class="t-text t-text-word t-body">Create the dotted grid,</p>
+                <p class="t-text t-text-word t-body">And let's create span words to stagger their appearance.</p>
+                <p class="t-text t-text-word t-body">When everything is all set, let's go watch
+                    <a href="https://twitch.tv/xqc" class="t-text t-text-word t-anchor">
+                        Streams.
+                    </a>
+                </p>
             </div>
         </div>
     </div>
