--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -21,6 +21,7 @@
         <a href="#placeholder" class="clickaway">Docking Board</a>
         <a href="#hover-box" class="clickaway">Linear Hover Boxes</a>
         <a href="#twitch" class="clickaway">Twitch Effect</a>
+        <a href="#slider" class="clickaway"> Superlist Sliders</a>
         </div>
     </div>
     <div id="placeholder">
@@ -96,12 +97,28 @@
                 <p class="t-text t-text-word t-body">Create the dotted grid,</p>
                 <p class="t-text t-text-word t-body">And let's create span words to stagger their appearance.</p>
                 <p class="t-text t-text-word t-body">When everything is all set, let's go watch
-                    <a href="https://twitch.tv/xqc" class="t-text t-text-word t-anchor">
+                    <a href="https://twitch.tv/xqc" target="_blank" class="t-text t-text-word t-anchor">
                         Streams.
                     </a>
                 </p>
             </div>
+            <p id="t-credits" class="t-text t-body">
+                By wyanhache. March 28, 2023.
+            </p>
         </div>
+    </div>
+    <div id="slider">
+        <div class="side" id="s-left">
+            <h1 class="s-text">
+                This cool effect requires <span class="s-fancy">some CSS magic.</span>
+            </h1>
+        </div>
+        <div class="side" id="s-right">
+            <h1 class="s-text">
+                This cool effect requires <span class="s-fancy">listening for the mouse.</span>
+            </h1>
+        </div>
+        <p id="s-credits" class="s-fancy">By wyanhache. March 29, 2023.</p>
     </div>
 </body>
 </html>
