Review Archive going live

--- a/tree.html
+++ b/tree.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>pogchamp website for reviewing your subjects</h1>
-    <p>welcome to ymh - your go to for reviewing for an exam in 2022!</p>
-    <p>YMH is currently undergoing a revamp and refresh of content. Come back later!</p>
+    <p>welcome to ymh - your go to for reviewing for an exam in 2022(3)!</p>
+    <p>YMH is currently open! redirect to the docs directory.</p>
 
 </body>
 </html>
