--- a/hyperplexed-recreation.html
+++ b/hyperplexed-recreation.html
@@ -22,11 +22,12 @@
         <a href="#hover-box" class="clickaway">Linear Hover Boxes</a>
         <a href="#twitch" class="clickaway">Twitch Effect</a>
         <a href="#slider" class="clickaway"> Superlist Sliders</a>
+        <p class="clickaway" id="cancel">Cancel</p>
         </div>
     </div>
     <div id="placeholder">
         <video autoplay muted loop id="ph-video" playsinline src="2023/Pexels Videos 2625udt.mp4"></video>
-        <p id="ph-text"><a href="https://youtube.com/hyperplexed"><span class="ph-g">Aspiring</span></a> to be induitably <a href="https://wyanhache.github.io"><span class="ph-g">inspiring</span></a></p>
+        <p id="ph-text"><a href="https://youtube.com/hyperplexed" target="_blank"><span class="ph-g">Aspiring</span></a> to be induitably <a href="https://wyanhache.github.io" target="_blank"><span class="ph-g">inspiring</span></a></p>
         <a href="#hover-box" id="pf-i">
             <img id="ph-img" src='2023/chevron.down@10x.png'>
         </a>
