Main Page Changes

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <div style="display: none" id="hideAll">&nbsp;</div>
     <div id="title">
-    <h1 id="wow">Misinformation and<br> Creativity Rotation in ChatGPT</h1>
+    <h1 id="wow">Project Archive<br> and Creativity Rotation</h1>
     <p class="w">
-        We are in a future of endless possibilities.<br>
-        But only if we are vigil and critical.<br>
-        <a target="_blank" href="2023/Misinformation and Creativity Rotation in ChatGPT.pptx" style="display: block; font-size: 18px; margin-top: 5%;font-family: 'Roboto Mono', monospace; ">DOWNLOAD PPT 
+        wyanhache is a Freshman from Shanghai, China.<br>
+        He makes documentaries and sleeps on developing this website.<br>
+        <a target="_blank" href="2023/Misinformation and Creativity Rotation in ChatGPT.pptx" style="display: block; font-size: 18px; margin-top: 5%;font-family: 'Roboto Mono', monospace; ">PA DOCUMENT STORAGE 
         <img
             src="2023/arrow.up.forward.app@10x.png"></a>
-            <a target="_blank" href="2023/chat-essay.html" style="display: block; font-size: 18px; margin-top: 1%;font-family: 'Roboto Mono', monospace; ">READ THE PAPER
+            <a target="_blank" href="2023/chat-essay.html" style="display: block; font-size: 18px; margin-top: 1%;font-family: 'Roboto Mono', monospace; ">READ THE CHATGPT PAPER
                 <img
                     src="2023/arrow.up.forward.app@10x.png"></a>
                 </p>
@@ -33,11 +33,7 @@
     <div class="ok">
         <p class="re" id="pf"><a id="wewewe" target="_blank" href="https://github.com/wyanhache/wyanhache.github.io/">wyanhache</a> portfolio 2023</p>
         <h1><a href="hyperplexed-recreation.html" style="text-decoration: none;">Hyperplexed Recreations</a></h1>
-        <h1><a href="pepe.html"style="text-decoration:none;">HTML Notes</a></h1>
-        <h1><a href="tree.html"style="text-decoration:none;">Review Archive</a></h1>
-        <h1><a href="bigbag/index.html"style="text-decoration:none;">Media Storage</a></h1>
-        <h1><a href="jsn.html"style="text-decoration:none;">JavaScript Notes - Beginners</a></h1>
-        <h1><a href="2023/trial.html"style="text-decoration:none;">Hacker Demo (from Hyperplexed)</a></h1>
+        <h1><a href="/docs/"style="text-decoration:none;">Review Archive</a></h1>
         <h1><a href="2023/hw.html"style="text-decoration:none;">Winter Homework 2022-02</a></h1>
     </div>
 
