--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="w">
         wyanhache is a Freshman from Shanghai, China.<br>
         He makes documentaries and sleeps on developing this website.<br>
-        <a target="_blank" href="2023/Misinformation and Creativity Rotation in ChatGPT.pptx" style="display: block; font-size: 18px; margin-top: 5%;font-family: 'Roboto Mono', monospace; ">PA DOCUMENT STORAGE 
+        <a target="_blank" href="/docs/" style="display: block; font-size: 18px; margin-top: 5%;font-family: 'Roboto Mono', monospace; ">PA DOCUMENT STORAGE 
         <img
             src="2023/arrow.up.forward.app@10x.png"></a>
             <a target="_blank" href="2023/chat-essay.html" style="display: block; font-size: 18px; margin-top: 1%;font-family: 'Roboto Mono', monospace; ">READ THE CHATGPT PAPER
